# nes-emu

./: .gitignore  Cargo.toml  README.md  config.cbor  cycles.txt  debugger.txt  microops.txt  palette.pal  rust-toolchain.toml
old/: .gitignore  debugger.txt
old/src/: controller.rs  main.rs  nes.rs  util.rs
old/src/apu/: channels.rs
old/src/cartridge/: cartridge.rs  mapper1.rs  mapper2.rs  mod.rs
old/src/cpu/: cpu_def.rs  cycles.rs  lookup_table.rs  mod.rs  operation_funcs.rs  step.rs
old/src/ppu/: ppu_def.rs
src/: addressing_funcs.rs  app.rs  apu.rs  cartridge.rs  cpu.rs  emu.rs  emulator.rs  hw.rs  input.rs  instr_defs.rs  instr_func.rs  instr_funcs.rs  instructions.rs  lib.rs  log.rs  logging.rs  main.rs  mappers.rs  mem.rs  microops.rs  nes.rs  opc.rs  outfile.rs  ppu.rs  setup.rs  todo.txt  ui.rs  util.rs  widgets.rs
src/apu/: apu_def.rs  channels.rs  mod.rs  step.rs  units.rs
src/cartridge/: cartridge.rs  mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper7.rs
src/cpu/: addressing.rs  cpu_def.rs  cycles.rs  lookup_table.rs  mod.rs  operation_funcs.rs  step.rs
src/nes/: apu.rs  cartridge.rs  controller.rs  cpu.rs  mem.rs  mem_consts.rs  ppu.rs
src/nes/apu/: apu_def.rs  channels.rs  mem.rs  step.rs
src/nes/cartridge/: cartridge.rs  cartridge_def.rs  mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper7.rs
src/nes/cpu/: addressing.rs  control_cycles.rs  cpu_def.rs  cycles.rs  debugger.rs  interrupt.rs  lookup_table.rs  mod.rs  operation_funcs.rs  processing_state.rs  simple_cycles.rs  step.rs
src/nes/cpu/instr/: addressing.rs  branch.rs  control.rs  interrupt.rs  jump.rs  memory.rs  mod.rs  nonmemory.rs
src/nes/cpu/instructions/: branch.rs  common.rs  (+4 more)
src/nes/ppu/: consts.rs  mem.rs  ppu_def.rs  step.rs
src/ppu/: mem.rs  mod.rs  ppu_def.rs  step.rs
src/widgets/: input_select.rs
(+5 files in other folders)
