[package]
name = "nes-emu-egui"
version = "0.1.0"
edition = "2021"

#[profile.release]
#panic = "abort"
#lto = "fat"
#codegen-units = 1

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
egui_extras = { version = "0.27.2", features = ["image", "svg"]}
image = { version = "0.24.7", features = ["png"] }
rfd = "0.15.2"
fastrand = "2.0.1"
cpal = "0.15.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.138"
typetag = "0.2.14"
dyn-clone = "1.0.16"
gilrs = { version = "0.11.0", features = ["serde-serialize"] }
uuid = { version = "1.6.1" , features = ["serde"]}
